# TD3

./: README.md  pyproject.toml  requirements.txt
models/: TD3_Ant-v4-1.pt  TD3_Cheetah.pt  TD3_Hopper-v4.pt  TD3_Hopper.pt  TD3_Pendulum-v1.pt  TD3_Pendulum.pt
notebooks/: td3.ipynb
src/td3/: __init__.py  main.py  test.py
src/td3/model/: td3.py
src/td3/utils/: metrics.py  replay.py  train.py
src/utils/: metrics.py  replay.py
